--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "vue": "^3.2.33"
   },
   "devDependencies": {
