--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
+    "mitt": "^3.0.0",
     "vue": "^3.2.33"
   },
   "devDependencies": {
